[2b9558f378d161cbca2af4a62783e6f5911de4e2]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -445,6 +445,62 @@ public class EncriptCard {
       <td>1</td>
       <td>Sim</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">card.encryptedCardNumber</code></td>
+      <td>Número do cartão criptografado, <a href="https://developercielo.github.io/manual/qrcode#public-keys">Veja mais</a></td>
+      <td> </td>
+      <td> </td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">card.holder</code></td>
+      <td>Nome do portador impresso no cartão.</td>
+      <td>Número</td>
+      <td>25</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">card.expirationDate</code></td>
+      <td>Data de validade impresso no cartão.</td>
+      <td>Texto</td>
+      <td>7</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">card.brand</code></td>
+      <td>Bandeira do cartão. Consultar a lista de produtos e bandeiras aceitas no QRCode.</td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">carrier.name</code></td>
+      <td>Nome do usuário do aplicativo.</td>
+      <td>Texyo</td>
+      <td>255</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">carrier.document</code></td>
+      <td>Documento do usuário do aplicativo, exemplo CPF. Enviar apenas número</td>
+      <td>Texto</td>
+      <td>14</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">carrier.deviceId</code></td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">crc.qrCodeText</code></td>
+      <td>QRCode</td>
+      <td> </td>
+      <td> </td>
+      <td>Sim</td>
+    </tr>
   </tbody>
 </table>
 
