[70d0554461869525a2fe7fef24752ba5d584bb0c]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -3125,7 +3125,7 @@ Abaixo especificamos qualquer diferença existente:</p>
         </span><span class="nl">"Name"</span><span class="p">:</span><span class="s2">"Nome do Comprador"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"Identity"</span><span class="p">:</span><span class="w"> </span><span class="s2">"12345678909"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"IdentityType"</span><span class="p">:</span><span class="w"> </span><span class="s2">"CPF"</span><span class="p">,</span><span class="w">
-        </span><span class="nl">"Email"</span><span class="p">:</span><span class="w"> </span><span class="s2">"comprador@braspag.com.br"</span><span class="p">,</span><span class="w">
+        </span><span class="nl">"Email"</span><span class="p">:</span><span class="w"> </span><span class="s2">"comprador@cielo.com.br"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"Address"</span><span class="p">:</span><span class="w">
         </span><span class="p">{</span><span class="w">
              </span><span class="nl">"Street"</span><span class="p">:</span><span class="s2">"Alameda Xingu"</span><span class="p">,</span><span class="w">
@@ -3143,7 +3143,7 @@ Abaixo especificamos qualquer diferença existente:</p>
         </span><span class="nl">"Provider"</span><span class="p">:</span><span class="s2">"Bradesco2"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"Type"</span><span class="p">:</span><span class="s2">"EletronicTransfer"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"Amount"</span><span class="p">:</span><span class="mi">10000</span><span class="p">,</span><span class="w">
-        </span><span class="nl">"ReturnUrl"</span><span class="p">:</span><span class="s2">"http://www.braspag.com.br"</span><span class="w">
+        </span><span class="nl">"ReturnUrl"</span><span class="p">:</span><span class="s2">"http://www.cielo.com.br"</span><span class="w">
     </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
@@ -3162,7 +3162,7 @@ Abaixo especificamos qualquer diferença existente:</p>
         <span class="s2">"Name"</span>:<span class="s2">"Nome do Comprador"</span>,
         <span class="s2">"Identity"</span>: <span class="s2">"12345678909"</span>,
         <span class="s2">"IdentityType"</span>: <span class="s2">"CPF"</span>,
-        <span class="s2">"Email"</span>: <span class="s2">"comprador@braspag.com.br"</span>,
+        <span class="s2">"Email"</span>: <span class="s2">"comprador@cielo.com.br"</span>,
         <span class="s2">"Address"</span>:
         <span class="o">{</span>
              <span class="s2">"Street"</span>:<span class="s2">"Alameda Xingu"</span>,
@@ -3180,7 +3180,7 @@ Abaixo especificamos qualquer diferença existente:</p>
         <span class="s2">"Provider"</span>:<span class="s2">"Bradesco2"</span>,
         <span class="s2">"Type"</span>:<span class="s2">"EletronicTransfer"</span>,
         <span class="s2">"Amount"</span>:10000,
-        <span class="s2">"ReturnUrl"</span>:<span class="s2">"http://www.braspag.com.br"</span>
+        <span class="s2">"ReturnUrl"</span>:<span class="s2">"http://www.cielo.com.br"</span>
     <span class="o">}</span>
 <span class="o">}</span>
 <span class="nt">--verbose</span>
