--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -279,7 +279,7 @@ public class EncriptCard {
 
 <h3 id="payments">Payments</h3>
 
-<p>O recurso <strong>POST /payments</strong> é responsável por efetuar o pagamento com base nos dados contidos no payload da requisição. No header da requisição é necessário os dados de <strong>client_id</strong>, <strong>access_token</strong>, <strong>Content-type</strong> e <strong>wallet</strong>. Wallet representa a carteira digital da aplicação sendo única por app. O corpo da requisição é composto por dados provenientes do aplicativo e do QR Code. [Verificar seção 3 para os campos extraídos do QR Code] (https://developercielo.github.io/manual/qrcode#d%C3%AA-para-qr-code-x-recurso-payments)</p>
+<p>O recurso <strong>POST /payments</strong> é responsável por efetuar o pagamento com base nos dados contidos no payload da requisição. No header da requisição é necessário os dados de <strong>client_id</strong>, <strong>access_token</strong>, <strong>Content-type</strong> e <strong>wallet</strong>. Wallet representa a carteira digital da aplicação sendo única por app. O corpo da requisição é composto por dados provenientes do aplicativo e do QR Code. <a href="https://developercielo.github.io/manual/qrcode#public-keys">Veja mais</a></p>
 
 <h4 id="contrato-2">Contrato</h4>
 
