--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -679,7 +679,7 @@ public class EncriptCard {
 
 <p>Os campos destacados em negrito são provenientes da análise do QR Code. O ID do campo e seu tamanho são sempre enviados antes do valor correspondente.</p>
 
-<p><img src="https://developercielo.github.io/images/layout-qr-code.png.png" alt="Layout QRCode" /></p>
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/layout-qr-code.png" alt="Layout QRCode" /></p>
 
 <h1 id="como-testar">Como Testar</h1>
 
@@ -696,7 +696,7 @@ public class EncriptCard {
 
   <p>QR Code Gerado a partir do código Exemplo</p>
 
-  <p><img src="https://developercielo.github.io/images/qrcode-qrcodeimg.png" alt="QrCode gerado a partir do código Exemplo" /></p>
+  <p><img src="https://developercielo.github.io/images/qrcode/qrcode-qrcodeimg.png" alt="QrCode gerado a partir do código Exemplo" /></p>
 </blockquote>
 
 <p><strong>Observação: Ao testar com o QR Code especificado um erro do tipo 422 é esperado, pois, não existe dados transacionais referentes no autorizador da Cielo.</strong></p>
