[f3b0f56b9813dd5fb973985fc5cad4bb6ea5d75f]: Update 2019-07-10-solucao-omni.md

--- a/manual/solucao-omni.html
+++ b/manual/solucao-omni.html
@@ -315,7 +315,7 @@
       <td>String</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: <code class="highlighter-rouge">ByMerchant</code> <br /> Enum: <code class="highlighter-rouge">ByMerchant</code> <code class="highlighter-rouge">ByIssuer</code> <br /> Tipo de Parcelamento: <br /> * Se o bit 6 do atributo confParamOp05, presente nas tabelas issuerTable e binTable e bit 6 do atributo confParamOp03 da tabela productTable estiverem todos habilitados indica que o tipo de parcelamento sem juros pode ser efetuado. <br /> * Se o bit 7 do atributo confParamOp05, presente nas tabelas issuerTable e binTable e bit 7 do atributo confParamOp03 da tabela productTable estiverem todos habilitados indica que o tipo de parcelamento com juros pode ser efetuado. Sem juros = “ByMerchant”; Com juros = “ByIssuer”.</td>
+      <td>Default: <code class="highlighter-rouge">ByMerchant</code> <br /> Enum: <code class="highlighter-rouge">ByMerchant</code> <code class="highlighter-rouge">ByIssuer</code> <br /> Tipo de Parcelamento: <br /> - Se o bit 6 do atributo confParamOp05, presente nas tabelas issuerTable e binTable e bit 6 do atributo confParamOp03 da tabela productTable estiverem todos habilitados indica que o tipo de parcelamento sem juros pode ser efetuado. <br /> - Se o bit 7 do atributo confParamOp05, presente nas tabelas issuerTable e binTable e bit 7 do atributo confParamOp03 da tabela productTable estiverem todos habilitados indica que o tipo de parcelamento com juros pode ser efetuado. Sem juros = “ByMerchant”; Com juros = “ByIssuer”.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.ProductId</code></td>
