--- a/manual/solucao-omni.html
+++ b/manual/solucao-omni.html
@@ -560,52 +560,52 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.ExpirationDate</code></td>
-      <td>—</td>
-      <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>String</td>
+      <td>MM/yyyy</td>
+      <td>Sim</td>
+      <td>Data de validade do cartão. <br />Dado obtido através do comando PP_GetCard na BC no momento da captura da transação.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.BrandId</code></td>
+      <td>Integer</td>
       <td>—</td>
-      <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>Sim</td>
+      <td>Identificação da bandeira obtida através do campo BrandId da PRODUCT TABLE.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.IssuerId</code></td>
+      <td>Integer</td>
       <td>—</td>
-      <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>Sim</td>
+      <td>Código do emissor obtido através do campo IssuerId da BIN TABLE.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.TruncateCardNumberWhenPrinting</code></td>
       <td>Booleano</td>
       <td>—</td>
       <td>—</td>
-      <td>—</td>
+      <td>Indica se o número do cartão será truncado no momento da impressão do comprovante. A solução de captura deve tomar essa decisão com base no <code class="highlighter-rouge">confParamOp03</code> presente nas tabelas BIN TABLE, PARAMETER TABLE e ISSUER TABLE.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.InputMode</code></td>
       <td>String</td>
       <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>Sim</td>
+      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja “06” - EMV sem contato.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
       <td>String</td>
       <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>Sim</td>
+      <td>Enum: <code class="highlighter-rouge">NoPassword</code> <code class="highlighter-rouge">OnlineAuthentication</code> <code class="highlighter-rouge">OfflineAuthentication</code> <br />Método de autenticação <br />- Se o cartão foi lido a partir da digitação verificar o bit 3 do atributo confParamOp04 das tabelas binTable, parameterTable e issuerTable. Se todos estiverem habilitados, a senha deve ser capturada e o authenticationMethod assume valor 2. Caso contrário, assume valor 1; <br />- Se o cartão foi lido a partir da trilha verificar o bit 3 do atributo confParamOp04 das tabelas binTable, parameterTable e issuerTable. Se todos estiverem habilitados, deve ser verificado o bit 2 do mesmo campo. Se este estiver com valor 1 deve ser capturada a senha. Se estiver com valor 0 a captura da senha vai depender do último dígito do service code; <br />- Se o cartão foi lido através do chip EMV, o authenticationMethod será preenchido com base no retorno da função PP_GoOnChip(). No resultado PP_GoOnChip(), onde se o campo da posição 003 do retorno da PP_GoOnChip() estiver com valor 1 indica que o pin foi validado off-line, o authenticationMethod será 3. Se o campo da posição 003 e o campo da posição 006 do retorno da PP_GoOnChip() estiverem com valor 0, o authenticationMethod será 1. Se o campo da posição 003 e o campo da posição 006 do retorno da PP_GoOnChip() estiverem com valores 0 e 1 respectivamente, o authenticationMethod será 2. <br />1 - Sem senha = “NoPassword”; <br />2 - Senha online = “Online Authentication”; <br />3 - Senha off-line = “Offline Authentication”.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.EmvData</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>Dados da transação EMV <br />Obtidos através do comando PP_GoOnChip na BC</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">PinBlock.EncryptedPinBlock</code></td>
