[4d9bf86f6ec9e8365ec8a137c21e1f8b3cc93212]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -677,7 +677,7 @@ public class EncriptCard {
 
 <p><img src="https://developercielo.github.io/images/qrcode/qrcode-pos.png" alt="QrCode Gerado Pelo POS" /></p>
 
-<p>Os campos destacados em negrito são provenientes da análise do QR Code. O ID do campo e seu tamanho são sempre enviados antes do valor correspondente.</p>
+<p>Os campos destacados e identificamos abaixo são provenientes da análise do QR Code. O ID do campo e seu tamanho são sempre enviados antes do valor correspondente.</p>
 
 <p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/layout-qr-code.png" alt="Layout QRCode" /></p>
 
