[94471c7d2590bf9df2d0c227b8f78e45d3e22792]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -696,7 +696,7 @@ public class EncriptCard {
 
   <p>QR Code Gerado a partir do código Exemplo</p>
 
-  <p><img src="https://developercielo.github.io/images/qrcode/qrcode-qrcodeimg.png" alt="QrCode gerado a partir do código Exemplo" /></p>
+  <p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/qro-code-exemplo.png" alt="QR Code gerado a partir do código de exemplo:" /></p>
 </blockquote>
 
 <p><strong>Observação: Ao testar com o QR Code especificado um erro do tipo 422 é esperado, pois, não existe dados transacionais referentes no autorizador da Cielo.</strong></p>
