[8da32e401bedff6bdf79fbd91e68b53a72fdb1a7]: Update 2019-07-10-solucao-omni.md

--- a/manual/solucao-omni.html
+++ b/manual/solucao-omni.html
@@ -6427,115 +6427,115 @@
   <tbody>
     <tr>
       <td><code class="highlighter-rouge">Address.ZipCode</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Address.Street</code></td>
-      <td>—</td>
-      <td>—</td>
-      <td>—</td>
-      <td>—</td>
-    </tr>
-    <tr>
-      <td><code class="highlighter-rouge">Address.Number</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Address.Number</code></td>
+      <td>String</td>
       <td>—</td>
+      <td>—</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Address.Number</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">TradeName</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CompanyName</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Email</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">PhoneNumber</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Mcc</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">DocumentNumber</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">DocumentType</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>Enum: <code class="highlighter-rouge">Cpf</code> <code class="highlighter-rouge">Cnpj</code></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.Name</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.Email</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.PhoneNumber</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.MessengerPhone</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.Gender</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>Enum: <code class="highlighter-rouge">Other</code> <code class="highlighter-rouge">Male</code> <code class="highlighter-rouge">Female</code></td>
     </tr>
   </tbody>
 </table>
@@ -6580,38 +6580,38 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.Name</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.Email</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.PhoneNumber</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.MessengerPhone</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Owner.Gender</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
-      <td>—</td>
-      <td>—</td>
+      <td>Enum: <code class="highlighter-rouge">Other</code> <code class="highlighter-rouge">Male</code> <code class="highlighter-rouge">Female</code></td>
     </tr>
   </tbody>
 </table>
@@ -6652,73 +6652,80 @@
   <tbody>
     <tr>
       <td><code class="highlighter-rouge">Address.ZipCode</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Address.Street</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Address.Number</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">Address.Complement</code></td>
-      <td>—</td>
+      <td><code class="highlighter-rouge">Address.Number</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">TradeName</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CompanyName</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Email</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">PhoneNumber</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Mcc</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">DocumentNumber</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">DocumentType</code></td>
+      <td>String</td>
       <td>—</td>
+      <td>—</td>
+      <td>Enum: <code class="highlighter-rouge">Cpf</code> <code class="highlighter-rouge">Cnpj</code></td>
     </tr>
   </tbody>
 </table>
@@ -6754,28 +6761,28 @@
   <tbody>
     <tr>
       <td><code class="highlighter-rouge">TerminalBaseModel.CommunicationType</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">TerminalBaseModel.EquipmentModel</code></td>
-      <td>—</td>
+      <td>Integer</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">TerminalBaseModel.EquipmentSerialNumber</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">TerminalBaseModel.TerminalId</code></td>
-      <td>—</td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
@@ -6808,36 +6815,36 @@
   </thead>
   <tbody>
     <tr>
-      <td><code class="highlighter-rouge">Terminal.CommunicationType</code></td>
-      <td>—</td>
-      <td>—</td>
-      <td>—</td>
-      <td>—</td>
-    </tr>
-    <tr>
-      <td><code class="highlighter-rouge">Terminal.EquipmentModel</code></td>
-      <td>—</td>
+      <td><code class="highlighter-rouge">TerminalBaseModel.CommunicationType</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">Terminal.EquipmentSerialNumber</code></td>
-      <td>—</td>
+      <td><code class="highlighter-rouge">TerminalBaseModel.EquipmentModel</code></td>
+      <td>Integer</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">Terminal.TerminalId</code></td>
+      <td><code class="highlighter-rouge">TerminalBaseModel.EquipmentSerialNumber</code></td>
+      <td>String</td>
       <td>—</td>
+      <td>—</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">TerminalBaseModel.TerminalId</code></td>
+      <td>String</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Terminal.SubordinatedMerchantId</code></td>
-      <td>—</td>
+      <td>String uuid</td>
       <td>—</td>
       <td>—</td>
       <td>—</td>
