[d98c3220349ac5b6fa9106fe4a0f36880053b078]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -803,14 +803,14 @@ Observação: Ao testar com o QR Code especificado um erro do tipo 422 é espera
     </tr>
     <tr>
       <td><code class="highlighter-rouge">originalTransactionType</code></td>
-      <td> </td>
+      <td>Transação de origem. Comunica o desfazimento de uma transação do /payments.</td>
       <td>Número</td>
       <td>1</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">statusCode</code></td>
-      <td> </td>
+      <td>1 - Pagamento / 2 - Cancelamento / 3 - Desfazimento - Quando desfazimento - statusCode = 3</td>
       <td>Número</td>
       <td>1</td>
       <td>Sim</td>
