[23cfa196f9d82917911cf3901801e5b9ea9eddac]: Update 2017-01-01-cielo-lio.md
Adicionei a restrição da utilização da LIO+ na integração Remota

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -139,7 +139,7 @@
 
 <p>Ambas contam com a Cielo Store, loja de aplicativos B2B disponível em todos as LIO´s, dando escala e distribuição para qualquer aplicativo integrado a ela.</p>
 
-<h2 id="modelos-disponíveis-da-cielo-lio">Modelos disponíveis da Cielo LIO</h2>
+<h3 id="modelos-disponíveis-da-cielo-lio">Modelos disponíveis da Cielo LIO</h3>
 
 <p>Atualmente a Cielo LIO está disponível em 3 modelos: LIO V1, LIO V2 e LIO +</p>
 
@@ -1947,6 +1947,11 @@ O método recebe como parâmetro o <code class="highlighter-rouge">bitmap</code>
   <li>Todas as requisições e respostas encontram-se no formato JSON.</li>
   <li>As seções abaixo possuem todas as informações necessárias para realizar a integração de forma rápida e segura.</li>
 </ul>
+
+<blockquote>
+  <p><strong>Atenção</strong>: O modelo da LIO+ não possui a aba de pedidos para a utlização na Integração Remota, a integração deve acontecer com os
+modelos v1 e v2 [Modelos disponíveis da Cielo LIO] ().</p>
+</blockquote>
 
 <h2 id="vídeo-demo-1">Vídeo Demo</h2>
 
