[a5550db7a9ebb63aabc1bf6c952b728620dc45f7]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -1950,7 +1950,7 @@ O método recebe como parâmetro o <code class="highlighter-rouge">bitmap</code>
 
 <blockquote>
   <p><strong>Atenção</strong>: O modelo da LIO+ não possui a aba de pedidos para a utlização na Integração Remota, a integração deve acontecer com os
-modelos v1 e v2 [Modelos disponíveis da Cielo LIO] ().</p>
+modelos LIO v1 e LIO v2.</p>
 </blockquote>
 
 <h2 id="vídeo-demo-1">Vídeo Demo</h2>
