[a91c08f6125eca728ed255025c503b82b741f0fc]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -818,7 +818,7 @@ Observação: Ao testar com o QR Code especificado um erro do tipo 422 é espera
   </tbody>
 </table>
 
-<h1 id="bandeiras-e-formas-de-parcelamento">Bandeiras e formas de parcelamento</h1>
+<h1 id="bandeiras-e-formas-de-parcelamento">Bandeiras e Formas de Parcelamento</h1>
 
 <p>A versão atual da API de QRCode possui suporte às seguintes bandeiras e formas de parcelamento:</p>
 
