--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/manual/integracao-javascript">2.1. Integração via Javascript</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/manual/emv3ds">Manual de Integração</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
