[edec604d1d228db759bf0a6bfb87e8144bb3525f]: Merge pull request #247 from DeveloperCielo/tsaitobraspag-patch-176
Inclusão de "Últimas atualizações"

--- a/manual/integracao-javascript.html
+++ b/manual/integracao-javascript.html
@@ -1080,6 +1080,9 @@
   </tbody>
 </table>
 
+<h1 id="Últimas-atualizações">Últimas atualizações</h1>
+
+<p>Para visualizar as últimas atualizações do manual, <a href="https://github.com/DeveloperCielo/developercielo.github.io/commits/docs/_i18n/pt/_posts/emv3ds/2019-09-20-integracao-javascript.md">clique aqui</a></p>
 
 </div>
 
