--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/manual/autorizacao-com-autenticacao">3. Autorização com Autenticação</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/manual/emv3ds">Manual de Integração</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
