[13712aa57ce1ba687008fe8b15582fe3ac3fdbf8]: Merge pull request #251 from DeveloperCielo/tsaitobraspag-patch-180
Inclusão de "Autorização com Autenticação"

--- a/manual/integracao-javascript.html
+++ b/manual/integracao-javascript.html
@@ -1080,6 +1080,11 @@
   </tbody>
 </table>
 
+<h2 id="autorização-com-autenticação">Autorização com Autenticação</h2>
+
+<p>Após autenticação ser concluída, submete-se ao processo de autorização, enviando os dados de autenticação no modelo de "autenticação externa" (nó <strong>ExternalAuthentication</strong> ).
+Veja maiores detalhes em: <a href="https://developercielo.github.io/manual/autorizacao-com-autenticacao">https://developercielo.github.io/manual/autorizacao-com-autenticacao</a></p>
+
 <h1 id="Últimas-atualizações">Últimas atualizações</h1>
 
 <p>Para visualizar as últimas atualizações do manual, <a href="https://github.com/DeveloperCielo/developercielo.github.io/commits/docs/_i18n/pt/_posts/emv3ds/2019-09-20-integracao-javascript.md">clique aqui</a></p>
