--- a/404.html
+++ b/404.html
@@ -115,7 +115,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/emv3ds">Manual de Integração</a>
+                    <a href="https://developercielo.github.io/manual/emv3ds">1. Introdução a 3DS 2.0</a>
                 </li>
             
             </ul>
