--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/emv3ds">Manual de Integração</a>
+                    <a href="https://developercielo.github.io/manual/emv3ds">1. Introdução a 3DS 2.0</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
             
