--- a/404.html
+++ b/404.html
@@ -111,7 +111,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/integracao-sdk-ios">2.3. SDK IOS (em breve)</a>
+                    <a href="https://developercielo.github.io/manual/integracao-sdk-ios">2.3. SDK IOS</a>
                 </li>
             
                 <li class="doc-title">
