--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/integracao-sdk-ios">2.3. SDK IOS (em breve)</a>
+                    <a href="https://developercielo.github.io/manual/integracao-sdk-ios">2.3. SDK IOS</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
             
