[2b3d8c5dc3100a941bcea2a665a23f9f4caa7fc9]: Merge pull request #254 from DeveloperCielo/tsaitobraspag-patch-183
Publicação do conteúdo

--- a/404.html
+++ b/404.html
@@ -107,7 +107,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/integracao-sdk-android">2.2. SDK Android (em breve)</a>
+                    <a href="https://developercielo.github.io/manual/integracao-sdk-android">2.3. SDK Android</a>
                 </li>
             
                 <li class="doc-title">
