--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/integracao-sdk-android">2.2. SDK Android (em breve)</a>
+                    <a href="https://developercielo.github.io/manual/integracao-sdk-android">2.3. SDK Android</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
             
