[a27e6780ab624b8cbe64382ce80cc0c4c63865ce]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -133,7 +133,7 @@
   <li><strong>POST</strong> /payments</li>
 </ul>
 
-<p><img src="https://developercielo.github.io/images/qrcode/qrcode-fluxointegracaoqrcode.png" alt="Fluxo de integração Qr Code" /></p>
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/fluxoIntegracao.png" alt="Fluxo de Integração QR Code" /></p>
 
 <h3 id="ambientes">Ambientes</h3>
 
