[203e4a046bdfc4c6cbe34427ce4a2d9319b8259d]: Update 2019-09-20-integracao-javascript.md

--- a/en/manual/integracao-javascript.html
+++ b/en/manual/integracao-javascript.html
@@ -1264,7 +1264,7 @@
   </tbody>
 </table>
 
-<h2 id="autorização-com-autenticação">Autorização com Autenticação</h2>
+<h2 id="authorization-with-authentication">Authorization with Authentication</h2>
 
 <p>After authentication is completed, submit to the authorization procedure, sending the authentication data in the model of quot;external authentication" (node <strong>ExternalAuthentication</strong> ).
 See more details at: <a href="https://developercielo.github.io/manual/autorizacao-com-autenticacao">https://developercielo.github.io/manual/autorizacao-com-autenticacao</a></p>
