--- a/en/404.html
+++ b/en/404.html
@@ -74,7 +74,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/en/manual/integracao-sdk-android">2.2. SDK Android (coming soon)</a>
+                    <a href="https://developercielo.github.io/en/manual/integracao-sdk-android">2.2. SDK Android</a>
                 </li>
             
                 <li class="doc-title">
