--- a/en/index.html
+++ b/en/index.html
@@ -99,7 +99,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/en/manual/integracao-sdk-android">2.2. SDK Android (coming soon)</a>
+                    <a href="https://developercielo.github.io/en/manual/integracao-sdk-android">2.2. SDK Android</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
             
