[f1eac8cc72eea7c3f3ab3e98ce95b22e0bbd5b51]: Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -319,15 +319,15 @@ Currently are available:</p>
 Click one of the options below to view the manual that best suits your needs:</p>
 
 <ol>
-  <li>Javascript Authentication: ideal for deployment in <a href="https://developercielo.github.io/manual/integracao-javascript">websites</a></li>
-  <li>SDK Android Authentication: ideal for deployment in-app Android <strong>(coming soon)</strong></li>
-  <li>SDK IOS Authentication: ideal for deployment in-app IOS <strong>(coming soon)</strong></li>
+  <li>Javascript Authentication: ideal for deployment in <a href="https://developercielo.github.io/en/manual/integracao-javascript">websites</a></li>
+  <li>SDK Android Authentication: ideal for deployment in-app Android in <a href="https://developercielo.github.io/en/manual/integracao-sdk-android">websites</a></li>
+  <li>SDK IOS Authentication: ideal for deployment in-app IOS in <a href="https://developercielo.github.io/en/manual/integracao-sdk-ios">websites</a></li>
 </ol>
 
 <h2 id="authorization-with-authentication">Authorization with Authentication</h2>
 
 <p>After authentication is completed, submit to the authorization procedure, sending the authentication data in the model of quot;external authentication" (node <strong>ExternalAuthentication</strong> ).
-See more details at: <a href="https://developercielo.github.io/manual/autorizacao-com-autenticacao">https://developercielo.github.io/manual/autorizacao-com-autenticacao</a></p>
+See more details at: <a href="https://developercielo.github.io/en/manual/autorizacao-com-autenticacao">https://developercielo.github.io/en/manual/autorizacao-com-autenticacao</a></p>
 
 </div>
 
