[7e8251d4d0c7880774a4c71114282fc72e6e4b85]: Update 2019-09-20-integracao-javascript.md

--- a/en/manual/autorizacao-com-autenticacao.html
+++ b/en/manual/autorizacao-com-autenticacao.html
@@ -258,7 +258,7 @@ This procedure is also valid for establishments that performed authentication ou
 
 <h3 id="response">Response</h3>
 
-<p>See https://developercielo.github.io/manual/cielo-ecommerce#resposta</p>
+<p>See more: <a href="https://developercielo.github.io/en/manual/cielo-ecommerce#response">https://developercielo.github.io/en/manual/cielo-ecommerce#response</a></p>
 
 <h1 id="authorization-with-authentication-webservice-15">Authorization with Authentication (Webservice 1.5)</h1>
 
@@ -340,7 +340,7 @@ This procedure is also valid for establishments that performed authentication ou
 
 <h3 id="response-1">Response</h3>
 
-<p>See https://developercielo.github.io/manual/webservice-1-5#tipos-de-retorno</p>
+<p>See more: <a href="https://developercielo.github.io/en/manual/webservice-1-5#return-types">https://developercielo.github.io/en/manual/webservice-1-5#return-types</a></p>
 
 </div>
 
