[0ccae77cfd8d0c40a50f6781226c04db2bd8bb4b]: Update 2019-09-20-integracao-javascript.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -318,8 +318,8 @@ Clique em uma das opções abaixo para visualizar o manual mais adequado para su
 
 <ol>
   <li>Autenticação via Java Script: ideal para implementação em <a href="https://developercielo.github.io/manual/integracao-javascript">websites</a></li>
-  <li>Autenticação via SDK Android: ideal para implementação in-app Android <strong>(em breve)</strong></li>
-  <li>Autenticação via SDK IOS: ideal para implementação em in-app IOS <strong>(em breve)</strong></li>
+  <li>Autenticação via SDK Android: ideal para implementação in-app Android em <a href="https://developercielo.github.io/manual/integracao-sdk-android">websites</a></li>
+  <li>Autenticação via SDK IOS: ideal para implementação em in-app IOS em <a href="https://developercielo.github.io/manual/integracao-sdk-ios">websites</a></li>
 </ol>
 
 <h2 id="autorização-com-autenticação">Autorização com Autenticação</h2>
